--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,9 +7,7 @@
     <title>frontend</title>
   </head>
   <body>
-    <div id="root">
-      <p>Loading...</p>
-    </div>
-    <!-- <script type="module" src="/src/main.jsx"></script> -->
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
