--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c0df283285.js" crossorigin="anonymous"></script>
+    <meta name="description" content="Trouvez facilement des artisans qualifiés près de chez vous pour tous vos projets de rénovation, réparation ou construction. Comparez les avis, les devis et choisissez l'artisan qui correspond à vos besoins." />
   </head>
   <body>
     <div id="root"></div>
